# manhuagui-downloader

./: LICENSE  README.md  auto-imports.d.ts  components.d.ts  eslint.config.js  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: close-default-title-issue.yml  publish.yml
frontend/src/components/download/: DownloadSearchBar.vue
src/: App.css  App.tsx  App.vue  AppContent.tsx  AppContent.vue  bindings.ts  main.ts  main.tsx  store.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  decrypt.rs  download_manager.rs  downloader.rs  errors.rs  events.rs  export.rs  extensions.rs  lib.rs  logger.rs  main.rs  manhuagui_client.rs  types.rs  utils.rs
src-tauri/src/downloader/: download_img_task.rs  download_manager.rs  download_task.rs  download_task_state.rs
src-tauri/src/export/: cbz.rs  pdf.rs
src-tauri/src/types/: chapter_info.rs  comic.rs  comic_info.rs  get_favorite_result.rs  log_metadata.rs  mod.rs  search_result.rs  user_profile.rs
src/components/: AboutDialog.tsx  ComicCard.tsx  ComicCard.vue  CompletedProgresses.tsx  DownloadedComicCard.tsx  FloatLabelInput.module.css  FloatLabelInput.tsx  FloatLabelInput.vue  IconButton.vue  LogViewer.tsx  LoginDialog.tsx  SettingsDialog.tsx  UncompletedProgresses.tsx
src/dialogs/: AboutDialog.tsx  AboutDialog.vue  LogDialog.tsx  LogDialog.vue  LoginDialog.tsx  LoginDialog.vue  SettingsDialog.tsx  SettingsDialog.vue
src/panes/: ChapterPane.tsx  ChapterPane.vue  DownloadedPane.tsx  DownloadingPane.tsx  FavoritePane.tsx  FavoritePane.vue  SearchPane.tsx  SearchPane.vue
src/panes/ChapterPane/: ChapterPane.vue
src/panes/ChapterPane/components/: ChapterDownloadPanel.vue  ChapterExportPanel.vue
src/panes/DownloadedPane/: DownloadedPane.tsx  DownloadedPane.vue
src/panes/DownloadedPane/components/: DownloadedComicCard.tsx  DownloadedComicCard.vue  UpdateDownloadedComicsButton.vue
src/panes/ProgressesPane/: ProgressesPane.tsx  ProgressesPane.vue
src/panes/ProgressesPane/components/: CompletedProgresses.tsx  CompletedProgresses.vue  ExportProgresses.vue  UncompletedProgresses.module.css  UncompletedProgresses.tsx  UncompletedProgresses.vue
src/styles/: ChapterPane.module.css  global.css
