[package]
name = "manhuagui-downloader"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "manhuagui_downloader_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

specta = { version = "2.0.0-rc" }
specta-util = { version = "0.0.7", features = ["export"] }
tauri-specta = { version = "2.0.0-rc", features = ["derive", "typescript"] }
specta-typescript = { version = "0.0.7" }

reqwest = { version = "0.12.9" }
reqwest-retry = { version = "0.7.0" }
reqwest-middleware = { version = "0.4.0" }

anyhow = { version = "1.0.91" }
parking_lot = { version = "0.12.3", features = ["send_guard"] }
scraper = { version = "0.22.0" }
lz-str = { version = "0.2.1" }
regex = { version = "1.11.1" }
tokio = { version = "1.43.0", features = ["full"] }
bytes = { version = "1.8.0" }

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
